# pdf_encription_rust

./: ARCHITECTURE.md  Cargo.toml  DEVELOPMENT_PLAN.md  README.md  Trunk.toml  index.html  styles.css
src/: lib.rs
src/application/ports/: mod.rs  pdf_service_port.rs  storage_port.rs
src/application/use_cases/: decrypt_pdf_use_case.rs  encrypt_pdf.rs  encrypt_pdf_use_case.rs  manage_settings.rs  mod.rs
src/domain/: error.rs  mod.rs
src/domain/entities/: mod.rs  pdf.rs  pdf_document.rs  user_settings.rs
src/domain/repositories/: mod.rs  pdf_repository.rs  settings_repository.rs
src/domain/tests/: pdf_document_tests.rs  settings_tests.rs
src/infrastructure/: encryption.rs  error.rs  integrity.rs  logging.rs  mod.rs  pdf_processor.rs  validation.rs
src/infrastructure/i18n/: en.json  i18n_service.rs  id.json
src/infrastructure/repositories/: pdf_repository_impl.rs
src/infrastructure/services/: encryption.rs  mod.rs
src/infrastructure/storage/: local_storage.rs
src/infrastructure/tests/: i18n_tests.rs  pdf_processor_tests.rs  storage_tests.rs
src/infrastructure/wasm/: crypto_engine.rs  pdf_processor.rs
src/presentation/: app.rs  context.rs  mod.rs  routing.rs
src/presentation/components/: encryption_controls.rs  error_boundary.rs  file_upload.rs  loading_indicator.rs  mod.rs  navigation.rs  pdf_preview.rs  status_indicator.rs  toast.rs
src/presentation/context/: error.rs  language.rs  loading.rs  mod.rs  progress.rs  theme.rs
src/presentation/pages/: decrypt.rs  encrypt.rs  home.rs  mod.rs  not_found.rs  settings.rs
src/presentation/state/: mod.rs
styles/: main.css
tests/: mod.rs
tests/components/: error_boundary.rs  loading_indicator.rs  mod.rs  navigation.rs  status_indicator.rs  test_utils.rs  toast.rs
tests/context/: error_context.rs  language_context.rs  loading_context.rs  mod.rs  progress_context.rs  theme_context.rs
tests/integration/: mod.rs  pdf_workflow.rs
tests/state/: mod.rs
