[package]
name = "pdf_encrypt_rust_wasm"
version = "0.1.0"
edition = "2021"
description = "A secure PDF encryption and decryption application using Rust and WebAssembly"
authors = ["Your Name <your.email@example.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "Storage", "Performance", "PerformanceMemory",
    "FileReader", "File", "FileList", "Blob",
    "HtmlInputElement", "DragEvent", "DataTransfer"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
gloo = "0.8"
log = "0.4"
console_log = "1.0"
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
wasm-logger = "0.2"
yew-router = "0.17"
stylist = { version = "0.12", features = ["yew_integration"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
